# cmake_examples

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  build.bat  generate_cmake.bat  readme.md
console/: console.sln
console/console/: Program.cs  console.csproj
src/: hello.cmake.in  helloConfig.cmake  helloConfig.cmake.in  test.cpp
src/lib/: MathStuff.cpp  MathStuff.h
src/libshared/: CMakeLists.txt  data.cpp  data.h  sharedlib.cpp  sharedlib.h
src/libstatic/: CMakeLists.txt  MathStuff.cpp  MathStuff.h  PlatformUtils.cpp  staticlib.h
src/main/: CMakeLists.txt  main.cpp  test.cpp  utils.cpp  utils.h
